# gamer

./: .appveyor.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  COPYING.md  Doxyfile.in  MANIFEST.in  Makefile.am  Makefile.in  README.dist  README.md  VERSION  configure  configure.ac  fetk-configure  gamer.spec  pyproject.toml  reference.txt  requirements.txt  setup.cfg  setup.py  uncrustify.cfg
.github/: CONTRIBUTING.md
blender_addon/: gamer_gui.py  tetrahedralization.py
cmake/: FindBlender.cmake  FindBreathe.cmake  FindExhale.cmake  Findpytest.cmake  Macros.cmake  VERSION.in  __init__.py.in  blenderexec.py.in  cxx_flag_overrides.cmake  version.cpp.in
cmake-modules/: CMakeCache.txt  CTestTestfile.cmake  FindBlender.cmake  FindBreathe.cmake  FindExhale.cmake  FindNumpy.cmake  FindSphinx.cmake  Findpytest.cmake  GetGitRevisionDescription.cmake  Makefile  __init__.py.in  blenderexec.py.in  c_flag_overrides.cmake  cmake_install.cmake  version.cpp.in
config/: bootstrap  bootstrap_verbose  bootstrapapp
data/: 2jho.off  coffin.off  decimationtest.off  dectesthole.off  deformedicosa.off  edge_based_decimation.off  face_based_decimated.off  fliptest.off  fliptest2.off  hexagon.off  icosa.off  klein.off  projective.off  (+4 more)
doc/doxygen/: Makefile.am  Makefile.in  gamer.dox.in  prog.h
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  conf.py  conf.py.in  index.rst  make.bat  requirements.txt  rtd-requirements.txt
docs/src/: algorithms.rst  blendgamer.rst  changelog.rst  conf.py  development.rst  dump.rst  faq.rst  index.rst  install.rst  pygamer.rst  tutorial.rst
docs/src/_templates/autosummary/: base.rst  class.rst  module.rst
docs/src/examples/: MeshProtein.py
docs/src/tutorials/: blendertutorial.rst
libraries/: .gitignore  CMakeLists.txt
libraries/Eigen/: CMakeLists.txt
libraries/octree/: CMakeLists.txt
libraries/tetgen/: CMakeLists.txt  tetgen.cxx  tetgen.h
libraries/triangle/: CMakeLists.txt  triangle.c
pygamer/: CMakeLists.txt
pygamer/src/: SMEdge.cpp  SMFace.cpp  SMFunctions.cpp  SMGlobal.cpp  SMSimplexID.cpp  SMVertex.cpp  SurfaceMesh.cpp  TMCell.cpp  TMEdge.cpp  TMFace.cpp  TMGlobal.cpp  TMSimplexID.cpp  TMVertex.cpp  TetMesh.cpp  Vector.cpp  pygamer.cpp
python/: CMakeLists.txt
python/docs/: CMakeLists.txt  conf.py  index.rst  pygamer.rst
python/docs/_templates/autosummary/: class.rst
python/src/: Face.cpp  SMEdge.cpp  SMFace.cpp  SMFunctions.cpp  SMGlobal.cpp  SMSimplexID.cpp  SMVertex.cpp  SurfaceMesh.cpp  TMCell.cpp  TMEdge.cpp  TMFace.cpp  TMGlobal.cpp  TMSimplexID.cpp  TMVertex.cpp  TetMesh.cpp  Vector.cpp  Vertex.cpp  pygamer.cpp
src/aaa_inc/gamer/: Makefile.am  Makefile.in  gamer.h
src/aaa_lib/: Makefile.am  Makefile.in
src/base/: Makefile.am  Makefile.in  gamer_base.c  gamer_base_p.h
src/biom/: CorrectNormals.C  GemMesh.C  GemMesh.h  GenerateSphereMesh.C  Makefile.am  Makefile.in  MarchingCube.C  MarchingCube.h  PDB2Mesh.C  PDB2Volume.C  PDB2Volume.h  ReadLattice.C  ReadPDB.C  ReadWriteMesh.C  RegionGrowing.C  SurfExtract.C  SurfRefine.C  SurfSmooth.C  SurfaceMesh.C  Triangulate.C
src/biom/gamer/: biom.h
swig/: CMakeLists.txt  IteratorWrapper.i  Makefile.am  Makefile.in  Makefile.simple  README  SurfaceMesh.i  TetMesh.i  Vertex.i  WrapSimplicialComplex.i  WrapSurfaceMesh.i  __init__.py  aclocal.m4  configure  configure.ac  example.c  exceptions.i  fetk-configure  gamer.i  gamer_typemaps.i  index_map.i  pre.i  pygamer.i  std_unique_ptr.i  typemaps.i
swig/cmake/Modules/: FindBlender.cmake
swig/config/: bootstrap  bootstrap_verbose  bootstrapapp
swig/m4/: ac_pkg_swig.m4  ax_python_numpy.m4
swig/src/: __init__.py  biom.i  exceptions.i  gamer.i  post.i  upy_gui.py
swig/test/: gamer_test.py  single-TT.off
tests/: CMakeLists.txt  CMakeLists.txt.bak  DecimateTest.cpp  ObjectTest.py  SurfaceMeshTest.cpp  SurfaceMesh_test.cpp  VertexTest.cpp  cmdtest.cpp  cmdtest2.cpp  example.cpp  main.cpp  masonscratch.cpp  multivector_test.cpp  orientable_test.cpp  readPDB_gauss.cpp  readPDB_molsurf.cpp  scratchtest.cpp  scratchtest_jbm.cpp  simplicial_complex_test.cpp  tensorTest.cpp  tensor_test.cpp  tetrahedralizationTest.cpp  vertex_test.cpp
tests/Example Meshes/Geometry/: sphere2.off
tests/justin/: ER-smooth.py  vertex-smooth-behavior.py
tetgen/: CMakeLists.txt
tools/: CMakeLists.txt
tools/GenerateMesh/: CMakeLists.txt  GenerateMesh.C  Makefile-simple  Makefile.am  Makefile.in  complex-myocardial-surfacemesh.off  configure  configure.ac
tools/GenerateMesh/config/: bootstrap  bootstrap_verbose  bootstrapapp
tools/ImproveSurfMesh/: CMakeLists.txt  ImproveSurfMesh.C  Makefile.am  Makefile.in  README  configure  configure.ac  fetk-configure
tools/ImproveSurfMesh/config/: bootstrap  bootstrap_verbose  bootstrapapp
tools/MolecularMesh/: 1CID.pdb.output.surf.off  CMakeLists.txt  Makefile.am  Makefile.in  MolecularMesh.C  README  configure  configure.ac
tools/MolecularMesh/config/: bootstrap  bootstrap_verbose  bootstrapapp
tools/blender/: README  blamer.blend  gamer_blender_depricated.py  gamer_pyubic_depricated.py  mesh_gamer_addon.py  mesh_gamer_addon2.49.py
tools/blender_addon/: CMakeLists.txt  __init__.in  __init__.py  boundary_markers.py  gamer_gui.py  markers.py  tetrahedralization.py  util.py
tools/blender_addon/src/: blendgamer.py  colormap.py  gamer_gui.py  gameraddon_main.py  markers.py  meshstats.py  surfacemesh_ops.py  tetrahedralization.py  ui.py  util.py  versions.py  viridis.npy
tools/blendgamer/: __init__.py.in
tools/blendgamer/2.79/: blendgamer.py  markers.py  surfacemesh_ops.py  tetrahedralization.py
tools/blendgamer/2.80/: blendgamer.py  markers.py  meshstats.py  report.py  surfacemesh_ops.py  tetrahedralization.py  ui.py  util.py  versions.py
tools/blendgamer/src/: blendgamer.py  colormap.py  colormap_enums.py  curvatures.py  markers.py  meshstats.py  report.py  surfacemesh_ops.py  tetrahedralization.py  ui.py  util.py  versions.py
tools/tests/: Makefile.am
tools/tests/triangle/: Makefile  tricall.c
triangle/: CMakeLists.txt  triangle.h
(+146 files in other folders)
